<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bottom_line_color" />

        <RadioGroup
            android:id="@+id/radioGroup_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_order"
                style="@style/MainTabButton"
                android:checked="true"
                android:drawableTop="@drawable/selector_menu_home"
                android:text="@string/menu_order_title" />

            <RadioButton
                android:id="@+id/radio_product"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/selector_menu_mall"
                android:text="@string/menu_product_title" />

            <RadioButton
                android:id="@+id/radio_customer"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/selector_menu_mine"
                android:text="@string/menu_customer_title" />

            <RadioButton
                android:id="@+id/radio_find"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/selector_menu_square"
                android:text="@string/menu_find_title" />

            <RadioButton
                android:id="@+id/radio_member"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/selector_menu_message"
                android:text="@string/menu_member_title" />
        </RadioGroup>
    </LinearLayout>

</TabHost>